--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -10,6 +10,7 @@ html {
         button {
             cursor: pointer;
             transition: all .1s ease-in;
+            z-index: 999;
             &:hover {
                 opacity: 0.9 !important;
                 box-shadow: 0 1px 3px 0 rgba(60,64,67,0.302), 0 4px 8px 3px rgba(60,64,67,0.149) !important;
